--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/main.css" />
-  <title>Portfolio</title>
+  <title>Degidev - Portfolio</title>
+  <link rel="shortcut icon" href="favicon/apple-icon-57x57.png" type="image/x-icon">  
 </head>
 
 <body>
