--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/main.css" />
   <title>Degidev - Portfolio</title>
-  <link rel="shortcut icon" href="favicon/apple-icon-57x57.png" type="image/x-icon">  
+  <link rel="shortcut icon" href="/favicon-16x16.png" type="image/x-icon">  
 </head>
 
 <body>
