add links und social

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Degidev - Portfolio</title>
-  <link rel="shortcut icon" href="/favicon-16x16.png" type="image/x-icon">  
+  <link rel="shortcut icon" href="/favicon-16x16.png" type="image/x-icon">
 </head>
 
 <body>
@@ -16,27 +17,59 @@
     <p>Coding | Graphics | Music and more </p>
   </header>
   <nav>
-      <div class="dropdown">
-        <button class="dropbtn"></button>
-          <div class="dropdown-content">
-              <a href="http://www.picsec.de">Home</a>
-              <a href="#">Coding</a>
-              <a href="#">About</a>
-              <a href="#">Works</a>
-              <a href="#">Music</a>
-              <a href="#">Graphics</a>
-              <a href="#">Links</a>
-        </div>
+    <div class="dropdown">
+      <button class="dropbtn"></button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="#">Coding</a>
+        <a href="#">About</a>
+        <a href="#">Works</a>
+        <a href="#">Music</a>
+        <a href="#">Graphics</a>
+        <a href="#">Links</a>
       </div>
     </div>
-  </nav>
+    </div>
 
+
+  </nav>
   <main>
     <div class="content">
-      <p>Hier steht Main Content</p>
+      <p>Main Content</p>
+      
     </div>
+    <div class="about">
+      <p>About</p>
+    </div>
+    <div class="works">
+      <p>Works</p>
+    </div>
+    <div class="music">
+      <p>Music</p>
+    </div>
+    <div class="graphics">
+      <p>Graphics</p>
+    </div>
+    <div class="links">
+      <socialmedia>
+        <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
+        <a href="http://www.twitter.de" class="fa fa-twitter"></a>
+        <a href="http://www.google.de" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-skype"></a>
+
+      </socialmedia>
+    </div>
+
   </main>
-  </div>
+  <footer>
+
+    <div class="footer">Footer
+    </div>
+
+  </footer>
 
 </body>
 
