--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Degidev - Portfolio</title>
+  <link rel="stylesheet" href="css/main.css" />
   <link rel="shortcut icon" href="/favicon-16x16.png" type="image/x-icon">
+  <title>Degidev - Portfolio</title>
 </head>
 
 <body>
@@ -20,50 +20,67 @@
     <div class="dropdown">
       <button class="dropbtn"></button>
       <div class="dropdown-content">
-        <a href="index.html">Home</a>
-        <a href="#">Coding</a>
+        <a href="#maincontent">Home</a>
         <a href="#">About</a>
+        <a href="http://www.google.de">About</a>
         <a href="#">Works</a>
         <a href="#">Music</a>
         <a href="#">Graphics</a>
-        <a href="#">Links</a>
+        <a href="#coding">Coding</a>
       </div>
     </div>
     </div>
-
-
   </nav>
+
   <main>
-    <div class="content">
-      <p>Main Content</p>
-      
+    <div class="maincontent">
+      <h3>Aktuelles</h3>
+      <ul>
+        <li>Add Header Logo</li>
+        <li>postion Navigation</li>
+        <li>Media querie</li>
+        <li>Socaial Media Icons</li>
+        <li>OnePager?</li>
+      </ul>
     </div>
+
     <div class="about">
-      <p>About</p>
+      <h3>About Me</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, ut non nisi maiores culpa mollitia maxime
+        consectetur nostrum, dolorum est necessitatibus? Ducimus vitae, nobis vero sit mollitia nulla sed temporibus.
+      </p>
     </div>
     <div class="works">
-      <p>Works</p>
-    </div>
-    <div class="music">
-      <p>Music</p>
+      <h3>Works</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae qui nobis eum ut ad voluptas exercitationem
+        iure consectetur natus, esse officiis ipsam et est aperiam obcaecati voluptatibus omnis dignissimos possimus.
+      </p>
     </div>
     <div class="graphics">
-      <p>Graphics</p>
+      <h3>Graphics</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, iste animi adipisci reprehenderit in aspernatur
+        unde ratione facere omnis quisquam totam necessitatibus dolores harum ipsam est quaerat voluptas distinctio quo.
+      </p>
     </div>
-    <div class="links">
-      <socialmedia>
-        <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
-        <a href="http://www.twitter.de" class="fa fa-twitter"></a>
-        <a href="http://www.google.de" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-skype"></a>
-
-      </socialmedia>
-    </div>
-
+    <div class="coding">
+      <h3>Coding</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ut nisi autem velit at sapiente! Totam atque
+        animi sint voluptatum error id ex ab quia pariatur, tenetur earum doloribus alias.</p>
   </main>
+  <socialmedia>
+    <p>Social Media</p>
+    <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
+    <a href="http://www.twitter.de" class="fa fa-twitter"></a>
+    <a href="http://www.google.de" class="fa fa-google"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-youtube"></a>
+    <a href="#" class="fa fa-instagram"></a>
+    <a href="#" class="fa fa-skype"></a>
+
+  </socialmedia>
+  </div>
+  </div>
+
   <footer>
 
     <div class="footer">Footer
