--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
         animi sint voluptatum error id ex ab quia pariatur, tenetur earum doloribus alias.</p>
   </main>
   <socialmedia>
-    <p>Social Media</p>
     <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
     <a href="http://www.twitter.de" class="fa fa-twitter"></a>
     <a href="http://www.google.de" class="fa fa-google"></a>
@@ -83,7 +82,14 @@
 
   <footer>
 
-    <div class="footer">Footer
+    <div class="footer">
+      <ul>
+      <li><a href="http://">Impressum</a></li>
+      <li><a href="http://">AGB's</a></li>
+      <li><a href="http://">Datenschutz</a></li>
+      <li><a href="http://"></a></li>
+      </ul>
+
     </div>
 
   </footer>
