--- a/index.html
+++ b/index.html
@@ -12,87 +12,58 @@
 </head>
 
 <body>
-  <header>
-    <h1>My Portfolio & Projects</h1>
-    <p>Coding | Graphics | Music and more </p>
-  </header>
-  <nav>
-    <div class="dropdown">
-      <button class="dropbtn"></button>
-      <div class="dropdown-content">
-        <a href="#maincontent">Home</a>
-        <a href="#">About</a>
-        <a href="http://www.google.de">About</a>
-        <a href="#">Works</a>
-        <a href="#">Music</a>
-        <a href="#">Graphics</a>
-        <a href="#coding">Coding</a>
+    <header>
+      <h1>degi.portfolio</h1>
+      <div class="navi">
+        
+        <p>about</p><p>projects</p><p>links</p>
       </div>
+    </header>
+    <nav>
+      <div class="dropdown">
+        <button class="dropbtn"></button>
+        <div class="dropdown-content">
+          <a href="#maincontent">Home</a>
+          <a href="#">About</a>
+          <a href="http://www.google.de">About</a>
+          <a href="#">Works</a>
+          <a href="#">Music</a>
+          <a href="#">Graphics</a>
+          <a href="#coding">Coding</a>
+        </div>
+      </div>
+      </div>
+    </nav>
+<main>
+<div class="main_content">
+  
+  <div class="sub_content"> <h2>Herzlich Wilkommen</h2><p>Warum ist dieser Text transaparent?
+    </p></p></div></div>
+</main>
+    <footer>
+      <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
+      <a href="http://www.twitter.de" class="fa fa-twitter"></a>
+      <a href="http://www.google.de" class="fa fa-google"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <a href="#" class="fa fa-youtube"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-skype"></a>
+    </socialmedia>
     </div>
     </div>
-  </nav>
 
-  <main>
-    <div class="maincontent">
-      <h3>Aktuelles</h3>
-      <ul>
-        <li>Add Header Logo</li>
-        <li>postion Navigation</li>
-        <li>Media querie</li>
-        <li>Socaial Media Icons</li>
-        <li>OnePager?</li>
-      </ul>
-    </div>
 
-    <div class="about">
-      <h3>About Me</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, ut non nisi maiores culpa mollitia maxime
-        consectetur nostrum, dolorum est necessitatibus? Ducimus vitae, nobis vero sit mollitia nulla sed temporibus.
-      </p>
-    </div>
-    <div class="works">
-      <h3>Works</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae qui nobis eum ut ad voluptas exercitationem
-        iure consectetur natus, esse officiis ipsam et est aperiam obcaecati voluptatibus omnis dignissimos possimus.
-      </p>
-    </div>
-    <div class="graphics">
-      <h3>Graphics</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, iste animi adipisci reprehenderit in aspernatur
-        unde ratione facere omnis quisquam totam necessitatibus dolores harum ipsam est quaerat voluptas distinctio quo.
-      </p>
-    </div>
-    <div class="coding">
-      <h3>Coding</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ut nisi autem velit at sapiente! Totam atque
-        animi sint voluptatum error id ex ab quia pariatur, tenetur earum doloribus alias.</p>
-  </main>
-  <socialmedia>
-    <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
-    <a href="http://www.twitter.de" class="fa fa-twitter"></a>
-    <a href="http://www.google.de" class="fa fa-google"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-youtube"></a>
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-skype"></a>
+      <div class="footer">
+        <ul>
+        <li><a href="http://">Impressum</a></li>
+        <li><a href="http://">AGB's</a></li>
+        <li><a href="http://">Datenschutz</a></li>
+        <li><a href="http://"></a></li>
+        </ul>
 
-  </socialmedia>
-  </div>
-  </div>
+      </div>
 
-  <footer>
-
-    <div class="footer">
-      <ul>
-      <li><a href="http://">Impressum</a></li>
-      <li><a href="http://">AGB's</a></li>
-      <li><a href="http://">Datenschutz</a></li>
-      <li><a href="http://"></a></li>
-      </ul>
-
-    </div>
-
-  </footer>
+    </footer>
 
 </body>
 
