--- a/index.html
+++ b/index.html
@@ -12,58 +12,65 @@
 </head>
 
 <body>
-    <header>
-      <h1>degi.portfolio</h1>
-      <div class="navi">
-        
-        <p>about</p><p>projects</p><p>links</p>
+  <header>
+    <h1>degi.portfolio</h1>
+    <div class="navi">
+
+      <p>about</p>
+      <p>projects</p>
+      <p>links</p>
+    </div>
+  </header>
+  <nav>
+    <div class="dropdown">
+      <button class="dropbtn"></button>
+      <div class="dropdown-content">
+        <a href="#maincontent">Home</a>
+        <a href="#">About</a>
+        <a href="http://www.google.de">About</a>
+        <a href="#">Works</a>
+        <a href="#">Music</a>
+        <a href="#">Graphics</a>
+        <a href="#coding">Coding</a>
       </div>
-    </header>
-    <nav>
-      <div class="dropdown">
-        <button class="dropbtn"></button>
-        <div class="dropdown-content">
-          <a href="#maincontent">Home</a>
-          <a href="#">About</a>
-          <a href="http://www.google.de">About</a>
-          <a href="#">Works</a>
-          <a href="#">Music</a>
-          <a href="#">Graphics</a>
-          <a href="#coding">Coding</a>
-        </div>
+    </div>
+    </div>
+  </nav>
+  <main>
+    <div class="main_content">
+
+      <div class="sub_content">
+        <h2>Herzlich Wilkommen</h2>
+        <p>Warum ist dieser Text transparaent ?
+        </p>
+<p>Navigation bearbeiten</p>
       </div>
-      </div>
-    </nav>
-<main>
-<div class="main_content">
-  
-  <div class="sub_content"> <h2>Herzlich Wilkommen</h2><p>Warum ist dieser Text transaparent?
-    </p></p></div></div>
-</main>
-    <footer>
-      <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
-      <a href="http://www.twitter.de" class="fa fa-twitter"></a>
-      <a href="http://www.google.de" class="fa fa-google"></a>
-      <a href="#" class="fa fa-linkedin"></a>
-      <a href="#" class="fa fa-youtube"></a>
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-skype"></a>
+    </div>
+  </main>
+  <footer>
+    <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
+    <a href="http://www.twitter.de" class="fa fa-twitter"></a>
+    <a href="http://www.google.de" class="fa fa-google"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-youtube"></a>
+    <a href="#" class="fa fa-instagram"></a>
+    <a href="#" class="fa fa-skype"></a>
     </socialmedia>
     </div>
     </div>
 
 
-      <div class="footer">
-        <ul>
+    <div class="footer">
+      <ul>
         <li><a href="http://">Impressum</a></li>
         <li><a href="http://">AGB's</a></li>
         <li><a href="http://">Datenschutz</a></li>
         <li><a href="http://"></a></li>
-        </ul>
+      </ul>
 
-      </div>
+    </div>
 
-    </footer>
+  </footer>
 
 </body>
 
