--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
     <div class="main_content">
 
       <div class="sub_content">
-        <h2>Herzlich Wilkommen</h2>
-        <p>Warum ist dieser Text transparaent ?
-        </p>
-<p>Navigation bearbeiten</p>
+        <h2>Herzlich Willkommen</h2>
+        <p>Warum ist dieser Text transparaent ?</p>
+        <p>Navigation bearbeiten</p>
+        <p>header ->colon change color</p>
+        <p>edit footer</p>
       </div>
     </div>
   </main>
