--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>Warum ist dieser Text transparaent ?</p>
         <p>Navigation bearbeiten</p>
         <p>header ->colon change color</p>
-        <p>edit footer</p>
+        <p>edit FOOOooter</p>
       </div>
     </div>
   </main>
