--- a/index.html
+++ b/index.html
@@ -13,38 +13,44 @@
 
 <body>
   <header>
-    <h1>degi<p>:</p>portfolio</h1>
-    <div class="navi">
-
-      <p>about</p>
-      <p>projects</p>
-      <p>links</p>
+    <h1>degi<b>:</b>portfolio</h1>
+    <!-- ------------------Responsive Navigation----------------- -->
+    <div class="btn_button">
+      <div class="btn_layer"></div>
+      <div class="btn_layer2"></div>
+      <div class="btn_layer3"></div>
     </div>
+    <!-- ---------------------Monitor Navigation----------------- -->
+    <nav class="navi">
+      <a href="#about">
+        <p><b>.</b>about</p>
+      </a>
+      <a href="#projects">
+        <p><b>.</b>projects</p>
+      </a>
+      <a href="#links">
+        <p><b>.</b>links</p>
+      </a>
+
+      </div>
+    </nav>
   </header>
   <nav>
     <div class="dropdown">
       <button class="dropbtn"></button>
       <div class="dropdown-content">
-        <a href="#maincontent">Home</a>
-        <a href="#">About</a>
-        <a href="http://www.google.de">About</a>
-        <a href="#">Works</a>
-        <a href="#">Music</a>
-        <a href="#">Graphics</a>
-        <a href="#coding">Coding</a>
+        <a href="#maincontent">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
       </div>
     </div>
     </div>
   </nav>
   <main>
     <div class="main_content">
-
-      <div class="sub_content">
-        <h2>Herzlich Willkommen</h2>
-        <p>Warum ist dieser Text transparaent ?</p>
-        <p>Navigation bearbeiten</p>
-        <p>header ->colon change color</p>
-        <p>edit FOOOooter</p>
+        <div class="typewriter">
+          <h1>....loading complete!</h1>
+        </div>
       </div>
     </div>
   </main>
@@ -66,7 +72,10 @@
         <li><a href="http://">Impressum</a></li>
         <li><a href="http://">AGB's</a></li>
         <li><a href="http://">Datenschutz</a></li>
-        <li><a href="http://"></a></li>
+        <li>
+          <p>copyright by R.D.</a>
+        </li>
+        </p>
       </ul>
 
     </div>
