bald Zeit für eine neue Version

--- a/index.html
+++ b/index.html
@@ -31,10 +31,22 @@
       <a href="#links">
         <p><b>.</b>links</p>
       </a>
-
+      </div>
+       <a href="#startseite">
+        <p><b>.</b>startseite</p>
+      </a>
       </div>
     </nav>
   </header>
+
+  <div class="itsme">
+    <div class="main_content">
+      <div class="typewriter">
+        <h1>... loading About</h1>
+      </div>
+    </div>
+  </div>
+
   <nav>
     <div class="dropdown">
       <button class="dropbtn"></button>
@@ -48,14 +60,18 @@
   </nav>
   <main>
     <div class="main_content">
-        <div class="typewriter">
-          <h1>....loading complete!</h1>
-        </div>
-
-   
+      <div class="typewriter">
+        <h1>....loading... overload!!</h1>
+        <h1>....loading... overload!!</h1>
+        <h1>....loading... overload!!</h1>
+        <h1>....loading... overload!!</h1>
+        <h1>....loading... overload!!</h1>
+        <h1>....loading... overload!!</h1>
       </div>
     </div>
-  </main>  
+    </div>
+    <div class="about_content">About</div>
+  </main>
   <footer>
     <a href="https://de-de.facebook.com/public/Rene-Degering" class="fa fa-facebook"></a>
     <a href="http://www.twitter.de" class="fa fa-twitter"></a>
