--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     </div>
     <!-- ---------------------Monitor Navigation----------------- -->
     <nav class="navi">
-      <a href="#about">
+      <a href="/about.html">
         <p><b>.</b>about</p>
       </a>
-      <a href="#projects">
+      <a href="/projects.html">
         <p><b>.</b>projects</p>
       </a>
-      <a href="#links">
+      <a href="/links.html">
         <p><b>.</b>links</p>
       </a>
       </div>
-       <a href="#startseite">
+       <a href="/index.html">
         <p><b>.</b>startseite</p>
       </a>
       </div>
