--- a/css/layout2/index.html
+++ b/css/layout2/index.html
@@ -10,7 +10,10 @@
   <title>Document</title>
 </head>
 
-<body>
+<body> <div class="img_about"></div>
+    <div class="main">
+   
+  </div>
   <div class="grid-container">
     <div class="header">
       <h1>Degi:Dev</h1>
@@ -31,12 +34,16 @@
   </div>
 
   <div class="left"></div>
-  <div class="right"></div>
-  <div class="main">
-    <div class="img_about"></div>
-  </div>
 
-  <div class="footer"> </div>
+  <div class="right"></div>
+
+  <!-- <div class="main">
+    <div class="img_about"></div>
+  </div> -->
+
+  <div class="footer"> <h2>FOOOOOTER</h2>
+
+  </div>
 </body>
 
 </html>
