--- a/css/layout2/index.html
+++ b/css/layout2/index.html
@@ -10,9 +10,9 @@
   <title>Document</title>
 </head>
 
-<body> <div class="img_about"></div>
-    <div class="main">
-   
+<body>
+  <div class="img_about"></div>
+  <div class="main">
   </div>
   <div class="grid-container">
     <div class="header">
@@ -41,7 +41,8 @@
     <div class="img_about"></div>
   </div> -->
 
-  <div class="footer"> <h2>FOOOOOTER</h2>
+  <div class="footer">
+    <h2>FOOOOOTER</h2>
 
   </div>
 </body>
