--- a/css/layout2/index.html
+++ b/css/layout2/index.html
@@ -11,13 +11,18 @@
 </head>
 
 <body>
+
+
   <div class="img_about"></div>
-  <div class="main">
-  </div>
+
   <div class="grid-container">
     <div class="header">
       <h1>Degi:Dev</h1>
     </div>
+    <div class="main">
+    </div>
+
+
     <div class="nav">
       <nav class="navi">
         <a href="/about.html">
@@ -29,6 +34,8 @@
         <a href="/links.html">
           <p><b>.</b>links</p>
         </a>
+
+
     </div>
     </nav>
   </div>
@@ -37,12 +44,14 @@
 
   <div class="right"></div>
 
-  <!-- <div class="main">
-    <div class="img_about"></div>
-  </div> -->
+  <div class="footer">
+
+  </div>
+ 
+  </div> </nav>
 
   <div class="footer">
-    <h2>FOOOOOTER</h2>
+  <p> </p>
 
   </div>
 </body>
