--- a/css/layout2/index.html
+++ b/css/layout2/index.html
@@ -13,11 +13,11 @@
 <body>
 
 
-  <div class="img_about"></div>
+  <div class="img_about">      
+  <h1>Degidev</h1></div>
 
   <div class="grid-container">
     <div class="header">
-      <h1>Degi:Dev</h1>
     </div>
     <div class="main">
     </div>
