--- a/css/layout2/index.html
+++ b/css/layout2/index.html
@@ -13,8 +13,11 @@
 <body>
 
 
-  <div class="img_about">      
-  <h1>Degidev</h1></div>
+  <div class="img_about">
+    <div class="headline">
+      <h1>Degidev:Portfolio</h1>
+    </div>
+  </div>
 
   <div class="grid-container">
     <div class="header">
@@ -47,11 +50,12 @@
   <div class="footer">
 
   </div>
- 
-  </div> </nav>
+
+  </div>
+  </nav>
 
   <div class="footer">
-  <p> </p>
+    <p> </p>
 
   </div>
 </body>
