--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
           <div class="dropdown">
             <div class="dropbtn">
               <div class="dropdown-content">
-                <a href="#maincontent" id="about">About</a>
-                <a href="#projects" id="projects">Projects</a>
-                <a href="#about" id="links">Links</a>
-              </div>
+               <li><a href="#startpage">Start</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#links">Links</a>
+              </div></li>
             </div>
           </div>
         </div>
@@ -49,8 +50,8 @@
 
 
   </div>
-  <div class="main">
-    <div class="startpage">
+  <div id="main">
+    <div id="startpage">
       <h2>Herzlich Willkommen</h2>
       <p>Grüß Gott" und "Herzlich willkommen" - diese beiden Begrüßungsfloskeln haben eines gemeinsam: wir wollen sie
         nicht im Title oder als H1-Überschrift auf der Startseite eines Internetauftrittes lesen!
@@ -63,10 +64,32 @@
         Selbstverständlich freuen wir uns, wenn Sie auf unsere Seiten gelangt sind und sich hier umsehen! Aber wir
         drücken unsere Freude anders aus: nämlich mit einfacher Bedienbarkeit und guten Inhalten.</p>
     </div>
-    <div class="about">About
+    <div id="about">About <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus officiis accusantium consequuntur saepe enim aperiam, ipsum placeat nobis tempora, velit dolore doloribus, veniam perspiciatis doloremque cumque quidem harum consequatur.
+    Iure distinctio, maxime explicabo minus eos rem, laborum non at vero, consequuntur sed ad molestiae a voluptatem voluptas perspiciatis. Officiis harum rem alias deserunt eveniet, perferendis repudiandae eius veniam tempora!
+    Earum, dolorum qui reprehenderit impedit quod culpa sunt at possimus eveniet illo, perspiciatis ipsa facilis suscipit deleniti? Ipsa voluptate alias nesciunt blanditiis incidunt ad, suscipit, tempore porro harum tenetur fugiat.
+    Dolor animi fuga cupiditate ipsam accusantium quas incidunt perferendis eligendi aut, nihil veniam corporis totam odit maiores nam blanditiis ab laudantium, sit eaque placeat excepturi adipisci, mollitia ipsa necessitatibus. Sapiente!</p>
     </div>
-    <div class="projects">Projects</div>
-    <div class="links">Links <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti dolor iste, quisquam est veritatis fugiat ullam molestiae totam amet perferendis animi voluptas minima id labore optio rerum eligendi possimus explicabo!
+    <div id="projects">Projects <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro repudiandae doloremque natus consequuntur laboriosam dignissimos quas cum, ex enim ullam magnam non consequatur, nisi illo recusandae ipsa aspernatur incidunt dolores?
+    Ad voluptates labore, pariatur error dolorem eum laudantium laborum delectus provident dolores. Porro quae autem voluptas aliquam repellat quisquam officia distinctio ipsa, ut iste consectetur animi, labore aspernatur ab sequi.
+    Architecto ducimus non maiores consequuntur deserunt officiis harum nostrum accusamus? Voluptatibus laborum esse atque, exercitationem quis ut totam aspernatur tenetur quo? Provident quaerat laborum sed inventore esse nihil ab eum?
+    Sit nemo ipsa debitis dolores, quia inventore voluptates officiis minima cupiditate temporibus! Sunt voluptatum architecto deserunt, nemo porro perferendis sequi facere pariatur quam, esse nihil animi, nostrum dolores ipsum atque.
+    Voluptatibus, aut ea. Maiores repudiandae esse ea vitae dolor alias, laborum recusandae accusantium suscipit odit maxime cupiditate assumenda, voluptatum illum sint. Commodi necessitatibus optio quasi doloribus temporibus pariatur dolor eos?
+    Voluptatibus reprehenderit rerum totam earum eligendi error vero similique omnis distinctio, in eveniet commodi quidem exercitationem officiis voluptas! Dolore magnam reiciendis, eligendi deleniti quam facere quis sunt perferendis nobis cum.
+    Voluptatum dicta quaerat tenetur ratione earum accusantium vitae qui magnam sapiente commodi rerum fuga temporibus, veniam illum! Ut labore numquam vitae? Aliquam officia quam ut quo voluptas libero laudantium rerum.
+    Qui, excepturi eum! Totam omnis aspernatur, vero iste est libero alias error veniam dolorem laborum veritatis delectus. Ut aut sed id maxime nam, excepturi assumenda a. Eum iusto deserunt ducimus?
+    Et nobis quas id repellendus? Veniam facere libero voluptatum eius vel incidunt a voluptate, nostrum rem! Doloremque eligendi nulla, alias reiciendis consectetur ipsum fugit exercitationem sapiente, quidem corporis hic placeat!
+    Ea qui ut eligendi similique! Magnam, nobis. Ipsum voluptate omnis veritatis quidem vero similique in atque explicabo tenetur provident, eligendi placeat quisquam corrupti. Rem dolore ipsam distinctio at tempore deleniti!
+    Vero consectetur quam ipsa. Beatae inventore suscipit totam cum nemo ut sed quidem ex labore corrupti, repellat eveniet? Dignissimos ad dolore accusantium minima labore, laboriosam accusamus dolorem repudiandae voluptatibus nisi.
+    Ullam provident ipsam fugiat doloribus necessitatibus eveniet natus accusamus pariatur beatae ipsa quisquam quod, error voluptates quas iusto enim nam. Molestiae ea fugit corrupti cum illum possimus sint cumque quasi!
+    Dignissimos explicabo blanditiis in consequatur sequi, ratione itaque minima excepturi natus dicta assumenda pariatur. Hic rerum dolorum ipsam nobis eos quo similique animi assumenda, nemo, perspiciatis consequuntur. Odio, delectus minus.
+    Nostrum molestiae, necessitatibus vitae dolorum adipisci, totam numquam quo magni sapiente, laudantium qui praesentium fugiat aperiam sint amet explicabo. Alias esse optio quod ducimus. Dolores, placeat! Nulla quia exercitationem aliquam!
+    Impedit, voluptatibus harum nesciunt voluptas tempore optio cum id nostrum. Eligendi esse illo tempora, officia rerum, veniam explicabo ea eos ipsa corrupti nisi doloremque vel et unde quod sequi modi!
+    Unde cupiditate, deserunt expedita tempora facilis rem eum nam quis fuga voluptatibus reprehenderit, inventore laudantium rerum quibusdam, odio tempore! Maiores, saepe quis minima odio nam veritatis harum accusamus veniam inventore.
+    Corrupti quos alias voluptates debitis hic iure mollitia illum quo quibusdam? Accusamus voluptatem delectus modi molestias, reiciendis commodi nobis voluptas reprehenderit dicta dignissimos saepe quasi tempora quod mollitia maxime doloremque.
+    Ipsa impedit quia temporibus repellendus, magni labore unde, quis molestias delectus maxime quo est assumenda nulla? Est, perferendis facilis? Tempora explicabo ipsam amet est! In blanditiis architecto saepe dicta laboriosam.
+    Sed exercitationem enim, facere earum quam commodi error impedit recusandae debitis in eveniet excepturi cumque tenetur ab sapiente neque explicabo ducimus voluptas. Delectus quia ab, laboriosam provident autem ratione. Dignissimos.
+    Accusantium omnis aut nihil illum, dolor libero quidem cum mollitia sed atque beatae? Natus odit alias nisi velit culpa in? Error et necessitatibus libero nihil labore iure. Necessitatibus, culpa excepturi?</p></div>
+    <div id="links">Links <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti dolor iste, quisquam est veritatis fugiat ullam molestiae totam amet perferendis animi voluptas minima id labore optio rerum eligendi possimus explicabo!
     Tempore blanditiis distinctio ipsa, deserunt repellat tenetur similique autem, vero quia expedita fugit exercitationem. Voluptate necessitatibus obcaecati, quaerat voluptatum tenetur numquam perferendis ducimus minus sunt tempore qui magnam, neque quas.
     Temporibus tempora cum deserunt tenetur debitis facilis rem laboriosam doloremque quaerat, repellat odit. Molestiae tempore pariatur nisi harum aperiam officia distinctio eius. Aut voluptate, ad placeat recusandae illo neque consectetur.
     Nulla possimus libero quos nemo dolor minus vitae praesentium rerum tempora, quisquam exercitationem, maxime voluptatum esse soluta perferendis dolore facere. Accusantium, beatae. Ab, similique? Odio architecto temporibus placeat similique nostrum?
