--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
   <div id="main">
     <div id="startpage">
       <h2>Herzlich Willkommen</h2>
-
-      <p>Grüß Gott" und "Herzlich willkommen" - diese beiden Begrüßungsfloskeln haben eines gemeinsam: wir wollen sie
+<p>Grüß Gott" und "Herzlich willkommen" - diese beiden Begrüßungsfloskeln haben eines gemeinsam: wir wollen sie
         nicht im Title oder als H1-Überschrift auf der Startseite eines Internetauftrittes lesen!
         Womöglich steht dort auch zu lesen: „Willkommen auf meiner Homepage“ – das ist in etwa so, als würde ich
         jemanden vor meiner Haustüre begrüßen, ihn aber nicht reinlassen: „Herzlich willkommen vor meiner Wohnung“.
@@ -65,7 +64,9 @@
         Aus diesem Grund ist unser Title für diese Seite auch vollkommen ironisch zu verstehen.
         Selbstverständlich freuen wir uns, wenn Sie auf unsere Seiten gelangt sind und sich hier umsehen! Aber wir
         drücken unsere Freude anders aus: nämlich mit einfacher Bedienbarkeit und guten Inhalten.
-      </p></div>
+      </p>
+    
+    </div>
 
       <div id="about"><h2>About</h2> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus officiis
           accusantium consequuntur saepe enim aperiam, ipsum placeat nobis tempora, velit dolore doloribus, veniam
