--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
   </div>
   <div id="main">
     <div id="startpage">
-      <h2>Herzlich Willkommen</h2>
+      <h2>My Portfolio</h2>
 <p>Grüß Gott" und "Herzlich willkommen" - diese beiden Begrüßungsfloskeln haben eines gemeinsam: wir wollen sie
-        nicht im Title oder als H1-Überschrift auf der Startseite eines Internetauftrittes lesen!
+        nicht im Title oder als H1-Überschrift auf der Startseite eines Internetauftrittes lesen!<br><br>
         Womöglich steht dort auch zu lesen: „Willkommen auf meiner Homepage“ – das ist in etwa so, als würde ich
         jemanden vor meiner Haustüre begrüßen, ihn aber nicht reinlassen: „Herzlich willkommen vor meiner Wohnung“.
         Denn der Begriff „Homepage“ bezeichnet lediglich die Startseite eines Internetauftrittes – eben die Home-Page.
         Das gesamte Konstrukt von allen Seiten, Bildern, Inhalten, Links usw nennt sich Website oder eingedeutscht:
-        Webseite.
+        Webseite.<br><br>
         Aus diesem Grund ist unser Title für diese Seite auch vollkommen ironisch zu verstehen.
         Selbstverständlich freuen wir uns, wenn Sie auf unsere Seiten gelangt sind und sich hier umsehen! Aber wir
         drücken unsere Freude anders aus: nämlich mit einfacher Bedienbarkeit und guten Inhalten.
