--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
     </p>
       <img src="/rec.jpg" alt="its me">
       <div class="content">
-        <p>Recording Stuff and more</p> 
+        <p>Recording</p> 
       </div>
+      <img src="/rec.jpg" alt="its me">
+      <div class="content">
+        <p>Sound & Music Engineering</p> 
+      </div>
+      <img src="/rec.jpg" alt="its me">
+      <div class="content"><p>Artists and Bands</p>
     </div>
 
     <div id="links">
