--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>My Portfolio
       </h2>
       </p>
-      <p>Grüß Gott" und "Herzlich willkommen" - diese beiden Begrüßungsfloskeln haben eines gemeinsam: wir wollen sie
+      <p>"Grüß Gott" und "Herzlich willkommen" - diese beiden Begrüßungsfloskeln haben eines gemeinsam: wir wollen sie
         nicht im Title oder als H1-Überschrift auf der Startseite eines Internetauftrittes lesen!<br><br>
         Womöglich steht dort auch zu lesen: „Willkommen auf meiner Homepage“ – das ist in etwa so, als würde ich
         jemanden vor meiner Haustüre begrüßen, ihn aber nicht reinlassen: „Herzlich willkommen vor meiner Wohnung“.
