--- a/index.html
+++ b/index.html
@@ -31,17 +31,25 @@
                 <li><a href="#startpage">Start</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#links">Links</a>
+                <li><a href="#links">Links</a>     
+                </li>
               </div>
-              </li>
+         
             </div>
           </div>
         </div>
       </div>
+      <div class="nav_desk">
+        <li><a href="#startpage">Start</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#links">Links</a>
+      </div>
     </div>
-
-
   </div>
+  </div>
+
+
   <div id="main">
     <div id="startpage">
       <h2>
@@ -60,7 +68,7 @@
         drücken unsere Freude anders aus: nämlich mit einfacher Bedienbarkeit und guten Inhalten.
       </p>
 
-   </div> 
+    </div>
 
     <div id="about">
       <h2>
@@ -77,28 +85,29 @@
       <h2>
         <p>Projects </p>
       </h2>
-    </p>
+      </p>
       <img src="/rec.jpg" alt="its me">
       <div class="content">
-        <p>Recording</p> 
+        <p>Recording</p>
       </div>
       <img src="/rec.jpg" alt="its me">
       <div class="content">
-        <p>Sound & Music Engineering</p> 
+        <p>Sound & Music Engineering</p>
       </div>
       <img src="/rec.jpg" alt="its me">
-      <div class="content"><p>Artists and Bands</p>
-    </div>
+      <div class="content">
+        <p>Artists and Bands</p>
+      </div>
 
-    <div id="links">
-      <h2>
-        <p>Links </p>
-      </h2>
-     </div>
+      <div id="links">
+        <h2>
+          <p>Links </p>
+        </h2>
+      </div>
 
-  <div class="left"></div>
-  <div class="right"></div>
-  <div class="footer"></div>
+      <div class="left"></div>
+      <div class="right"></div>
+      <div class="footer"></div>
 
 </body>
 
