--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
       <div class="content">
         <p>Recording</p>
       </div>
-      <img src="/rec.jpg" alt="its me">
+      <img src="/bunker.PNG" alt="picsec1">
       <div class="content">
-        <p>Sound & Music Engineering</p>
+        <p>Band Projekte</p>
       </div>
-      <img src="/rec.jpg" alt="its me">
+
+      <img src="/picsec02.jpg" alt="its me">
       <div class="content">
-        <p>Artists and Bands</p>
+        <p>picture-section.de </p>
       </div>
 
       <div id="links">
@@ -104,11 +105,9 @@
           <p>Links </p>
         </h2>
       </div>
-
       <div class="left"></div>
       <div class="right"></div>
       <div class="footer"></div>
-
 </body>
 
 </html>
