change header height

--- a/index.html
+++ b/index.html
@@ -92,22 +92,23 @@
       </div>
       <img src="/bunker.PNG" alt="picsec1">
       <div class="content">
-        <p>Band Projekte</p>
+        <p><h3>Band Projekte</h3></p>
       </div>
 
       <img src="/picsec02.jpg" alt="its me">
       <div class="content">
-        <p>picture-section.de </p>
-      </div>
-
-      <div id="links">
-          <p>Videos</p></div>
+        <p><h3>picture-section.de</h3> </p>
+      </div>      
       <div class="content_yt">
            <iframe width="410" height="315" src="https://www.youtube.com/embed/4FQ2LxrYaMo" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
       </div>
+
+      <div id="links">
+          <p><h3>Event-Projects</h3></p></div>
+
       <div class="left"></div>
       <div class="right"></div>
       <div class="footer"></div>
