--- a/index.html
+++ b/index.html
@@ -53,20 +53,8 @@
   <div id="main">
     <div id="startpage">
       <h2>
-        <p>My Portfolio
+        <p>My Portfolio</p>
       </h2>
-      </p>
-      <p>"Grüß Gott" und "Herzlich willkommen" - diese beiden Begrüßungsfloskeln haben eines gemeinsam: wir wollen sie
-        nicht im Title oder als H1-Überschrift auf der Startseite eines Internetauftrittes lesen!<br><br>
-        Womöglich steht dort auch zu lesen: „Willkommen auf meiner Homepage“ – das ist in etwa so, als würde ich
-        jemanden vor meiner Haustüre begrüßen, ihn aber nicht reinlassen: „Herzlich willkommen vor meiner Wohnung“.
-        Denn der Begriff „Homepage“ bezeichnet lediglich die Startseite eines Internetauftrittes – eben die Home-Page.
-        Das gesamte Konstrukt von allen Seiten, Bildern, Inhalten, Links usw nennt sich Website oder eingedeutscht:
-        Webseite.<br><br>
-        Aus diesem Grund ist unser Title für diese Seite auch vollkommen ironisch zu verstehen.
-        Selbstverständlich freuen wir uns, wenn Sie auf unsere Seiten gelangt sind und sich hier umsehen! Aber wir
-        drücken unsere Freude anders aus: nämlich mit einfacher Bedienbarkeit und guten Inhalten.
-      </p>
 
     </div>
 
@@ -92,22 +80,29 @@
       </div>
       <img src="/bunker.PNG" alt="picsec1">
       <div class="content">
-        <p><h3>Band Projekte</h3></p>
+        <p>
+        <h3>Band Projekte</h3>
+        </p>
       </div>
 
       <img src="/picsec02.jpg" alt="its me">
       <div class="content">
-        <p><h3>picture-section.de</h3> </p>
-      </div>      
+        <p>
+        <h3>picture-section.de</h3>
+        </p>
+      </div>
       <div class="content_yt">
-           <iframe width="410" height="315" src="https://www.youtube.com/embed/4FQ2LxrYaMo" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <iframe width="410" height="315" src="https://www.youtube.com/embed/4FQ2LxrYaMo" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
 
       <div id="links">
-          <p><h3>Event-Projects</h3></p></div>
+        <p>
+        <h3>Event-Projects</h3>
+        </p>
+      </div>
 
       <div class="left"></div>
       <div class="right"></div>
