--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="grid-container">
     <div class="header">
-      <h1>Degi:Portfolio</h1>
+      <h1>Degi:Portfolio !</h1>
       <div class="img_about">
       </div>
     </div>
@@ -47,7 +47,7 @@
       </div>
     </div>
   </div>
-  </div>
+
 
 
   <div id="main">
@@ -94,6 +94,7 @@
         <h3>picture-section.de</h3>
         </p>
       </div>
+      
       <div class="content_yt">
         <iframe width="410" height="315" src="https://www.youtube.com/embed/4FQ2LxrYaMo" title="YouTube video player"
           frameborder="0"
