--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="grid-container">
     <div class="header">
-      <h1>Degi:Portfolio !</h1>
+      <h1>Degi:Portfolio</h1>
       <div class="img_about">
       </div>
     </div>
